@@ -4,6 +4,7 @@ procps-ng-NEXT
     internal: days/users when value is 0                   issue #303
     internal: dont print 60s but increment minute          issue #302
   * w: Don't segfault with -s option                       issue #301
+  * w: Cache pids list                                     issue #305
 
 procps-ng-4.0.4
 ---------------
